feat: GEOT-238: add tags service and worker (#73)
* feat: GEOT-238: add tags service and worker

* fix: GEOT-238: missing worker

* fix: GEOT-238: missing files

* feat: GEOT-238: publish queue msg about tags

* fix: GEOT-238: many small fixes after testing

* feat: GEOT-238: update swagger definitions
